# oglopp

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Examples/: compute-example.cpp  gcompute-example.cpp  geometry-shader-example.cpp  main.cpp  material-example.cpp  perspective-example.cpp  postprocessing-example.cpp  shading-example.cpp  specular-map-example.cpp  texture-example.cpp
Examples/assets/: cubish.fbx
Examples/skel/: Makefile  oglopp-app
Examples/skel/assets/textures/krita/: BLOCK_BASE.kra  TEST_BLOCK.kra  block1.kra  dirt.kra  grass.kra  stone.kra
Examples/skel/include/: chunkdata.h  defines.h  perlin.h  worldgen.h  worldpos.h
Examples/skel/include/assets/: chunk.h  sphere.h
Examples/skel/shaders/: fragment.glsl  geometry.glsl  vertex.glsl
Examples/skel/src/: chunkdata.cpp  main.cpp  perlin.cpp  worldgen.cpp  worldpos.cpp
Examples/skel/src/assets/: chunk.cpp  sphere.cpp
Headers/: camera.hpp  matrix.hpp  oglopp.h  rectangle.hpp  shader.hpp  shape.hpp  window.hpp
Headers/oglopp/: camera.h  compute.h  defines.h  fbo.h  init.h  interrupts.h  matrix.h  more_shapes.h  shader.h  shape.h  ssbo.h  texture.h  window.h
Headers/oglopp/glad/: gl.h
Shaders/: multiColour.frag
Sources/: Texture.cpp  camera.cpp  compute.cpp  fbo.cpp  init.cpp  interrupts.cpp  main.cpp  matrix.cpp  moreShapes.cpp  more_shapes.cpp  rectangle.cpp  shader.cpp  shape.cpp  ssbo.cpp  texture.cpp  triangle.cpp  window.cpp
cmake/: cmake_uninstall.cmake.in
docs/: Doxyfile  matrices.kra  matrices.kra~  sketch1.kra  sketch1.kra~
glad/: README.md
glad/include/glad/: gl.h
ogloppVS/: oglopp.sln  oglopp.vcxproj  oglopp.vcxproj.filters
ogloppVS/x64/Debug/: oglopp.idb
ogloppVS/x64/Debug/oglopp.tlog/: oglopp.lastbuildstate
